--- a/src/Product.css
+++ b/src/Product.css
@@ -27,8 +27,11 @@
   background: #ff9f00;
   border: 1px solid;
   margin-top: 10px;
+  padding: 7.5px 15px;
   border-color: #a88734 #9c7e31 #846a29;
   color: #111;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .product__price {
