initial setup of login page

--- a/src/Header.css
+++ b/src/Header.css
@@ -8,12 +8,15 @@
   z-index: 100;
 }
 
+.header__link {
+  cursor: pointer;
+}
+
 .header__logo {
   display: flex;
   align-items: center;
   color: #ff9f00;
   margin: 0 25px;
-  cursor: pointer;
 }
 
 .header__logoImage {
